<resources>
    <string name="app_name">Demo Application</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="show_total_bill">Show Total Bill</string>
    <string name="total_price">Total Price</string>
    <string name="book_name">Book Name</string>
    <string name="calculate_price">Calculate Price</string>
    <string name="play">Play</string>
    <string name="leader_board">Leader Board</string>
    <string name="username">Username</string>
    <string name="bat_amount">Bat Amount</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="first_name">First name</string>
</resources>