<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <ImageView
        android:layout_width="45pt"
        android:layout_height="45pt"
        android:id="@+id/imgViewAddProductLogo"
        android:src="@drawable/add_product"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30pt"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgViewAddProductLogo"
        android:id="@+id/edtAddProductProduceName"
        android:layout_marginTop="30pt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:hint="@string/product_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtAddProductProduceName"
        android:id="@+id/edtAddProductProductPrice"
        android:layout_marginTop="20pt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtAddProductProductPrice"
        android:id="@+id/edtAddProductProductQty"
        android:layout_marginTop="20pt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:hint="@string/quantity"
        android:inputType="number"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddProductShowBill"
        android:layout_below="@id/edtAddProductProductQty"
        android:layout_marginTop="30pt"
        android:layout_centerHorizontal="true"
        android:text="@string/show_total_bill"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAddProductTotalBill"
        android:layout_below="@id/btnAddProductShowBill"
        android:layout_marginTop="30pt"
        android:text="@string/total_price"
        android:layout_centerHorizontal="true"

        />


</RelativeLayout>