<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayearInputActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/edtPlyearDataUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:hint="@string/username"
        android:layout_marginTop="200dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/edtPlyearDataBatAmt"
        android:layout_below="@id/edtPlyearDataUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:hint="@string/bat_amount"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlyearDataPlay"
        android:layout_below="@id/edtPlyearDataBatAmt"
        android:text="@string/play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        />

</RelativeLayout>