<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

   <!-- <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLoginLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/company_logo"
        />
-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginTitle"
        android:text="@string/login"
        android:textSize="25pt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLoginTitle"
        android:id="@+id/edtLoginEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginStart="80dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtLoginEmail"
        android:id="@+id/edtLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginStart="80dp"
        android:hint="@string/password"
        android:minHeight="48dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoginSubmit"
        android:layout_below="@id/edtLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginSignupLink"
        android:layout_below="@id/btnLoginSubmit"
        android:text="@string/sign_up"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        />


</RelativeLayout>